tests/ui/nll/user-annotations/dump-adt-brace-struct.stderr
error: user args: UserArgs { args: [&ReStatic u32], user_self_ty: None }
  --> $DIR/dump-adt-brace-struct.rs:19:5
   |
LL |     SomeStruct::<&'static u32> { t: &22 };
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

